/*
 * This file was generated by the Gradle 'init' task.
 */

plugins {
    id 'java-library'
    id 'maven-publish'
    id 'signing'
}

repositories {
    mavenCentral()
    flatDir {
        dirs "$rootProject.projectDir/ex-lib"
    }
/*
    maven {
        url = uri('https://repo.maven.apache.org/maven2/')
    }
*/
}

group = 'com.lwohvye'
version = '4.0.0-delta'
java.sourceCompatibility = JavaVersion.VERSION_20

java {
    withSourcesJar()
}

publishing {
    repositories {
        maven {
            name = "GitHubPackages"
            url = uri("https://maven.pkg.github.com/OWNER/REPOSITORY")
            credentials {
                username = project.findProperty("gpr.user") ?: System.getenv("USERNAME")
                password = project.findProperty("gpr.key") ?: System.getenv("TOKEN")
            }
        }
    }
}

signing {
    //    The "CI" environment variable is set by GitHub Actions
    required { !version.endsWith("-SNAPSHOT") && System.getenv("CI") == null }
    publishing.publications.configureEach {
        sign it
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.compilerArgs += '--enable-preview'
}
